--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <script src="https://kit.fontawesome.com/9e357f2cb3.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
+    <!-- ---header section  -->
+    <section class="header">
+        <div class="main">
+            
+        </div>
+    </section>
+
+
+
     
+
+
+
+<!-- ------script section -->
+<script src="index.js"></script>
 </body>
 </html>
