--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <!-- ---header section  -->
     <section class="header">
         <div class="main">
-            
+            <div class="icon">
+                <div class="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">personal information</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#"></a></li>
+                </div>
+            </div>
         </div>
     </section>
 
