--- a/index.html
+++ b/index.html
@@ -11,14 +11,24 @@
     <!-- ---header section  -->
     <section class="header">
         <div class="main">
-            <div class="icon">
+            <div class="main-header">
+                <a href="#" class="logo"></a>
+
                 <div class="menu">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">personal information</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="#">Orders</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">settings</a></li>
                 </div>
+                <div class="icons">
+                    <li><i class="fa-regular fa-bell"></i></li>
+                    <li><i class="fa-brands fa-searchengin"></i></li>
+                    <li><i class="fa-solid fa-cart-shopping"></i></li>
+                </div>
+                <a href="#"><i class="fa-solid fa-list"></i></a>
             </div>
+
         </div>
     </section>
 
