--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <section class="header">
         <div class="main">
             <div class="main-header">
-                <a href="#" class="logo"></a>
-
+                <div class="logo">
+                    <img src="/imag/business logo template company logo (1) - Made with PosterMyWall.jpg" alt="">
+                </div>
                 <div class="menu">
+                    
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Orders</a></li>
                     <li><a href="#">About</a></li>
