--- a/index.html
+++ b/index.html
@@ -6,8 +6,36 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/9e357f2cb3.js" crossorigin="anonymous"></script>
-</head>
+
 <body>
+
+        <!-- ---login section  -->
+  <h1>Welcome to EGEREATS!</h1>
+  <div id="loginForm">
+    <h2>Login</h2>
+    <form id="loginForm">
+      <label for="loginUsername">Username:</label><br>
+      <input type="text" id="loginUsername" name="loginUsername"><br>
+      <label for="loginPassword">Password:</label><br>
+      <input type="password" id="loginPassword" name="loginPassword"><br><br>
+      <input type="submit" value="Login">
+    </form>
+  </div>
+
+
+      <!-- ---signUp section  -->
+  <div id="signupForm">
+    <h2>Sign Up</h2>
+    <form id="signupForm">
+      <label for="signupUsername">Username:</label><br>
+      <input type="text" id="signupUsername" name="signupUsername"><br>
+      <label for="signupPassword">Password:</label><br>
+      <input type="password" id="signupPassword" name="signupPassword"><br><br>
+      <input type="submit" value="Sign Up">
+    </form>
+  </div>
+
+
     <!-- ---header section  -->
     <section class="header">
         <div class="main">
