--- a/index.html
+++ b/index.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Egereats</title>
-    <link href="index.css" rel="stylesheet">
+    
 </head>
 
 <body>
 
 
 
-    <!-- Payment method-->
+<!-- Payment method
+ <section paymentMethods>
     <h1>Select Payment Method</h1>
     <div id="paymentMethods">
         <button id="mpesaBtn">M-Pesa</button>
         <button id="paypalBtn">PayPal</button>
     </div>
 
-    <!-- Add modal for payment confirmation -->
+    // Add modal for payment confirmation
     <div id="paymentModal" class="modal">
-        <div class="modal-content">
+        <div class="mod gial-content">
             <span class="close">&times;</span>
             <p id="paymentStatus"></p>
         </div>
     </div>
-    
-    <script src="index.js"></script>
+</section> 
+-->
+
+
 </body>
 </html>
