--- a/index.html
+++ b/index.html
@@ -30,37 +30,41 @@
                     <li><i class="fa-regular fa-bell"></i></li>
                     <li><i class="fa-brands fa-searchengin"></i></li>
                     <li><i class="fa-solid fa-cart-shopping"></i></li>
-                    <li><i class="fa-regular fa-user"></i></li>
+                    <li><i  id="userButton"   class="fa-regular fa-user"></i></li>
                 </div>
                 <a href="#"><i class="fa-solid fa-list"></i></a>
             </div>
 
         </div>
     </section>
-    <!-- ---login section  -->
-  <h1>Welcome to EGEREATS!</h1>
-  <div id="loginForm">
-    <h2>Login</h2>
-    <form id="loginForm">
-      <label for="loginUsername">Username:</label><br>
-      <input type="text" id="loginUsername" name="loginUsername"><br>
-      <label for="loginPassword">Password:</label><br>
-      <input type="password" id="loginPassword" name="loginPassword"><br><br>
-      <input type="submit" value="Login">
-    </form>
-  </div>
 
-      <!-- ---signUp section  -->
-  <div id="signupForm">
-    <h2>Sign Up</h2>
-    <form id="signupForm">
-      <label for="signupUsername">Username:</label><br>
-      <input type="text" id="signupUsername" name="signupUsername"><br>
-      <label for="signupPassword">Password:</label><br>
-      <input type="password" id="signupPassword" name="signupPassword"><br><br>
-      <input type="submit" value="Sign Up">
-    </form>
-  </div>
+  <!-- trial  -->
+ 
+
+<div id="loginForm" style="display: none;">
+  <!-- Login form -->
+  <h2>Login</h2>
+  <form id="loginForm">
+    <label for="loginUsername">Username:</label><br>
+    <input type="text" id="loginUsername" name="loginUsername"><br>
+    <label for="loginPassword">Password:</label><br>
+    <input type="password" id="loginPassword" name="loginPassword"><br><br>
+    <input type="submit" value="Login">
+  </form>
+</div>
+
+<div id="signupForm" style="display: none;">
+  <!-- Signup form -->
+  <h2>Sign Up</h2>
+  <form id="signupForm">
+    <label for="signupUsername">Username:</label><br>
+    <input type="text" id="signupUsername" name="signupUsername"><br>
+    <label for="signupPassword">Password:</label><br>
+    <input type="password" id="signupPassword" name="signupPassword"><br><br>
+    <input type="submit" value="Sign Up">
+  </form>
+</div>
+
 
     <!-------food  ordering section ------ -->
     <div class="container">
