--- a/index.html
+++ b/index.html
@@ -39,32 +39,31 @@
     </section>
 
   <!-- trial  -->
- 
 
-<div id="loginForm" style="display: none;">
-  <!-- Login form -->
-  <h2>Login</h2>
-  <form id="loginForm">
-    <label for="loginUsername">Username:</label><br>
-    <input type="text" id="loginUsername" name="loginUsername"><br>
-    <label for="loginPassword">Password:</label><br>
-    <input type="password" id="loginPassword" name="loginPassword"><br><br>
-    <input type="submit" value="Login">
-  </form>
-</div>
-
-<div id="signupForm" style="display: none;">
-  <!-- Signup form -->
-  <h2>Sign Up</h2>
-  <form id="signupForm">
-    <label for="signupUsername">Username:</label><br>
-    <input type="text" id="signupUsername" name="signupUsername"><br>
-    <label for="signupPassword">Password:</label><br>
-    <input type="password" id="signupPassword" name="signupPassword"><br><br>
-    <input type="submit" value="Sign Up">
-  </form>
-</div>
-
+  <div id="loginForm" class="dropdown-content">
+    <!-- Login form -->
+    <h2>Login</h2>
+    <form id="loginForm">
+      <label for="loginUsername">Username:</label><br>
+      <input type="text" id="loginUsername" name="loginUsername"><br>
+      <label for="loginPassword">Password:</label><br>
+      <input type="password" id="loginPassword" name="loginPassword"><br><br>
+      <input type="submit" value="Login">
+    </form>
+  </div>
+  
+  <div id="signupForm" class="dropdown-content">
+    <!-- Signup form -->
+    <h2>Sign Up</h2>
+    <form id="signupForm">
+      <label for="signupUsername">Username:</label><br>
+      <input type="text" id="signupUsername" name="signupUsername"><br>
+      <label for="signupPassword">Password:</label><br>
+      <input type="password" id="signupPassword" name="signupPassword"><br><br>
+      <input type="submit" value="Sign Up">
+    </form>
+  </div>
+  
 
     <!-------food  ordering section ------ -->
     <div class="container">
