--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
         </div>
     </section>
 
+    <!-- ------explore section -->
+    <section class="grid">
+        <div class="content">
+            <div class="content-left">
+                <div class="info">
+                    <h3>Order your Best <br>Food anytime</h3>
+                    <p>Hey there, feeling hungry? Don't hesitate! Dive into our delicious dishes and satisfy your cravings today!</p>
+                </div>
+                <button  class="explore">Explore Food</button>
+
+            </div>
+            <div class="content-right">
+
+            </div>
+        </div>
+    </section>
+
   <!-- trial  -->
 
   <div id="loginForm" class="dropdown-content">
