--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
             </div>
             <div class="content-right">
+                <img src="/imag/pexels-robin-stickel-70497.jpg" alt="">
 
             </div>
         </div>
