--- a/index.html
+++ b/index.html
@@ -135,25 +135,25 @@
           <tr> 
              <td>10</td>
              <td>1</td>
-             <td>0543</td>
+             <td>0552</td>
              <td>delivered</td>
           </tr>
           <tr>
            <td>11</td>
-           <td>0544</td>
            <td>2</td>
+           <td>0553</td>
            <td>delivered</td>
           </tr>
           <tr> 
            <td>12</td>
-           <td>0555</td>
            <td>3</td>
+           <td>0554</td>
            <td>delivered</td>
          </tr>
          <tr>
            <td>13</td>
-           <td>0556</td>
            <td>4</td>
+           <td>0554</td>
            <td>intransit</td>
          </tr>
           </table>
@@ -228,4 +228,4 @@
 <!-- ------script section -->
 <script src="index.js"></script>
 </body>
-</html>
+</html>-
