--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
             </div>
             <div class="contact-content">
                 <h5>Quick Links </h5>
-                <li><a href="#"> >Home</a></li>
-                <li><a href="#"> >Features</a></li>
-                <li><a href="#"> >Contact</a></li>
-                <li><a href="#"> >Security</a></li>
-                <li><a href="#"> >Settings</a></li>
+                <li><a href="#"> Home</a></li>
+                <li><a href="#"> Features</a></li>
+                <li><a href="#"> Contact</a></li>
+                <li><a href="#"> Security</a></li>
+                <li><a href="#"> Settings</a></li>
             </div>
             <div class="contact-content">
                 <h5>NewsLetter </h5>
