--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
       <input type="text" id="loginUsername" name="loginUsername"><br>
       <label for="loginPassword">Password:</label><br>
       <input type="password" id="loginPassword" name="loginPassword"><br><br>
-      <input type="submit" value="Login">
+      <input type="submit" value="LogContact
+      in">
     </form>
   </div>
   
