--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                     <li><a href="#">settings</a></li>
                 </div>
                 <div class="icons">
-                    <li><i class="fa-regular fa-bell"></i></li>
+                    <li  ><><i id="notificationButton"  class="fas fa-bell"></i></li>
                     <li class="search-icon"><i class="fa-brands fa-searchengin"></i></li>
-                    <li><i class="fa-solid fa-cart-shopping"></i></li>
+                    <li   ><i class="fa-solid fa-cart-shopping"></i></li>
                     <li><i  id="userButton"   class="fa-regular fa-user"></i></li>
                     
                 </div>
@@ -56,6 +56,19 @@
             </div>
         </div>
     </section>
+    <div class="notification-container">
+      <!-- Notification Button -->
+      <li id="notificationButton"></li>
+
+      <!-- Notification Dropdown -->
+      <div class="notification-dropdown" id="notificationDropdown">
+          <ul class="notification-list">
+              <li class="notification-item">Notification 1</li>
+              <li class="notification-item">Notification 2</li>
+              <li class="notification-item">Notification 3</li>
+          </ul>
+      </div>
+  </div>
 
   <!-- trial  -->
 
