payment and orders

--- a/payment.html
+++ b/payment.html
@@ -24,12 +24,12 @@
     <body>
       <div class="featuresContainer">
         <div class="featuresContainer menu">
-          <a href="#paymentOptionsContainer">
+          <a href="payment.html">
             <div class="paymentOptionsMenuItem">
               <h4>payment options</h4>
             </div>
           </a>
-          <a href="#ordersContainer">
+          <a href="orders.html">
             <div class="orderMenuItem">
               <h4>orders</h4>
             </div>
@@ -74,23 +74,6 @@
         </div>
   
         <!--========================= end of payment options============================== -->
-        <div id="ordersContainer">
-          <h3>Current orders</h3>
-          <div class="currentOrders">
-            <h4>Order id:</h4>
-            <h4>Date:</h4>
-            <h4>Items:</h4>
-            <h4>Status:</h4>
-          </div>
-          <h3>Past Orders</h3>
-          <div class="pastOrders">
-            <h4>Order id:</h4>
-            <h4>Date:</h4>
-            <h4>Items:</h4>
-            <h4>Status:</h4>
-          </div>
-        </div>
-      </div>
-  
+       
 </body>
 </html>
