--- a/product.html
+++ b/product.html
@@ -53,8 +53,9 @@
         <div class="btn">
             <button class="close">CLOSE</button>
             <button class="checkOut">CHECKOUT</button>
+
       </div>
     </div>
-
+<script src="product.js"></script>
 </body>
 </html>
