--- a/product.html
+++ b/product.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="product.css">
     <script src="https://kit.fontawesome.com/9e357f2cb3.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="showCart">
       <!-------food  ordering section ------ -->
-      <div class="product">
+      <div class="container">
         <header>
             <div class="tittle">PRODUCT LIST</div>
             <div class="icon-cart">
