--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         </div>
     </section>
 
+
+
+    
+
     <!-- ------explore section -->
     <section class="grid">
         <div class="content">
@@ -56,6 +60,34 @@
             </div>
         </div>
     </section>
+
+
+    <div id="services">
+      <div class="container">
+        <h1 class="sub-tittle">Our Services</h1>
+        <div class="services-list">
+           <div>
+            <i class="fas fa -code"></i>
+             
+            <h2>Delivery services </h2>
+            <p>forever  this  remains  to be  the  most  likable vand  marketable field</p>
+            <a href="#">learn more</a>
+           </div> 
+           <div>
+            <i class="fas fa-crop-alt"></i>
+            <h2>payment services</h2>
+            <p>forever  this  remains  to be  the  most  likable vand  marketable field</p>
+            <a href="#">learn more</a>
+           </div>
+           <div>
+            <i class="fab fa-app-store"></i>
+            <h2></h2>
+            <p>forever  this  remains  to be  the  most  likable vand  marketable field</p>
+            <a href="#">learn more</a>
+           </div>
+        </div>
+      </div>
+</div>
 
   <!-- trial  -->
 
