--- a/index.html
+++ b/index.html
@@ -90,10 +90,12 @@
 </div>
 
 <!-- my blog -->
+
+
 <h1>our Blog</h1>
 
 <div class="blog_container">
-  <div class="blog_1">
+  <div class="blog blog_1">
     <img id="blog_1_image" src="#">
     <h2 id="blog_1_heading">
       Try our new smocha roll!
@@ -103,7 +105,7 @@
 
       </p>
   </div>
-  <div class="blog_2">
+  <div class="blog blog_2">
     <img id="blog_2_image" src="#">
     <h2 id="blog_2_heading">
       Don't leave before having our delicious fish!
@@ -114,7 +116,7 @@
     </p>
 
   </div>
-  <div class="blog_3">
+  <div class="blog blog_3">
     <img id="blog_3_image" src="#">
     <h2 id="blog_3_heading">
       Exite your tastebuds with our fruit juice mixes!
@@ -127,6 +129,9 @@
 
   </div>
 </div>
+
+
+
   <!-- trial  -->
 
 <section>
