Changes made to Our Menu. Added Title

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
   <!-- trial  -->
 
     <!-- OUR MENU  -->
-<html lang="en">
+    <section>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -149,6 +150,7 @@
     </style>
 </head>
 <body>
+  <h1>Our <span>Menu</span></h1>
     <div class="container">
         <div class="item">
             <img src="imag\gallery_9.webp" alt="Coffee">
@@ -186,12 +188,15 @@
       <p>Price: Kes 100.00</p>
       <button class="add-to-cart">Add to Cart</button>
   </div>
+
   <div class="item">
     <img src="imag\gallery_26.jpg" alt="Chapati">
     <h3>Chapati</h3>
     <p>Price: Kes 20.00</p>
     <button class="add-to-cart">Add to Cart</button>
-</div>
+  </div>
+
+
 <div class="item">
   <img src="imag\gallery_49.jpg" alt="Black Tea">
   <h3>Black Tea</h3>
@@ -242,7 +247,7 @@
 </div>
         <!-- Add more items as needed -->
     </div>
-
+  </section>
 
     
       <!-- --- END OF OUR MENU  -->
