--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Egereats Shopping  Website</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/9e357f2cb3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -191,10 +192,72 @@
            
         </div>
     </section>
+
+    <!-- Order -->
+    <section class="order-content">
+      <div class="oder">
+
+        <h1><span>Oder</span>Now</h1>
+
+        <div class="oder_main">
+
+            <div class="oder_img">
+                <img src="image/oder.png">
+            </div>
+
+            <div class="oder_form">
+
+                <h2>Door Delivery</h2>
+
+                <div class="oder_list">
+
+                    <div class="oder_left">
+
+                        <p>Full Name</p>
+                        <input type="text" placeholder="Haust Smith">
+
+                        <p>Number</p>
+                        <input type="number" placeholder="+25474 2364 943">
+
+                        <p>Extra food</p>
+                        <input type="text" placeholder="with cocacola">
+
+                        <p>You Address</p>
+                        <textarea placeholder="Enter You Address"></textarea>
+
+                    </div>
+
+                    <div class="oder_right">
+
+                        <p>Email</p>
+                        <input type="email" placeholder="smiqmoses@gmail.com">
+
+                        <p>Food Name</p>
+                        <input type="text" placeholder="Chips">
+
+                        <p>How Much</p>
+                        <input type="number" placeholder="3">
+
+                        <p>You Message</p>
+                        <textarea placeholder="Enter Your Message"></textarea>
+
+                    </div>
+
+                </div>
+
+                <a href="#" class="oder_btn"><i class="fa-solid fa-burger"></i>Oder Now</a>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    </section>
     
 
 
-<!-- ------script section -->
+<!-- script section -->
 <script src="index.js"></script>
 </body>
 </html>
