Items background color changed by Aegon

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             background-color: #f0f0f0;
         }
         .container {
+            background-color: #f6f4fc;
             max-width: 1200px;
             margin: 20px auto;
             padding: 20px;
@@ -113,7 +114,7 @@
             grid-gap: 20px;
         }
         .item {
-            background-color: #fff;
+            background-color: #6757f3;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
